Fixed bug #48004 (Error handler prevents creation of default object)